--- a/css/profile.css
+++ b/css/profile.css
@@ -38,7 +38,7 @@
     --error-accent-color: #FF220C;
     --block-accent-color-110: #E6E6E6;
     --block-accent-color-06: #02020206;
-    --block-accent-color-210: #00663310;
+    --block-accent-color-210: #EFF5F2;
     --like-button-accent-color: #FF220C10;
     --param-color: #533A7B;
     --posts-color: #3891A6;
