--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ header {
 
 header .phone-link {
     display: flex;
-    gap: 1.6rem;
+    gap: 1rem;
     align-items: end;
     font-family: 'Unbounded';
     font-weight: 900;
@@ -505,7 +505,7 @@ textarea {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    
+
     background-color: var(--block-color);
     box-shadow: var(--shadow-small);
     border-radius: 2rem;
@@ -548,6 +548,24 @@ textarea {
 .first-part li svg path:last-child {
     stroke-width: 1.5px;
     stroke: var(--else-text-color-50);
+}
+
+.first-part li svg.pointer {
+    min-height: 11px;
+    max-height: 11px;
+    fill: var(--else-text-color-50);
+    margin-left: auto;
+    transition: 0.2s;
+    opacity: 0;
+}
+
+.first-part li:hover svg.pointer {
+    opacity: 1;
+}
+
+.first-part li svg.pointer path {
+    stroke-width: 0;
+    stroke: transparent;
 }
 
 .first-part li:hover {
@@ -656,6 +674,44 @@ textarea {
 
 .like-button.liked svg {
     animation: like-post 1s;
+}
+
+.menu-profile {
+    position: relative;
+}
+
+.menu-profile div {
+    display: flex;
+    gap: 0.39rem;
+    flex-direction: column;
+}
+
+.menu-profile div p:first-child {
+    color: var(--main-text-color);
+}
+
+.menu-profile div p:last-child {
+    color: var(--else-text-color-50);
+    font-size: var(--font-size-1);
+}
+
+.menu-profile .menu-avatar {
+    min-height: 50px;
+    min-width: 50px;
+    max-width: 50px;
+    max-height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.menu-profile img:first-child {
+    min-height: 24px;
+    min-width: 24px;
+    max-width: 24px;
+    max-height: 24px;
+    position: absolute;
+    top: 1.1rem;
+    left: 1.6rem;
 }
 
 @keyframes like-post {
