--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@
     --shadow-small: 0 0 12px #02020205;
     --shadow-popup: 0 0 9px #02020211;
     --font-size-1: 1.3rem;
-    --font-size-2: 1.6rem;
+    --font-size-2: 1.8rem;
     --font-size-3: 3.2rem;
 
     font-size: 62.5%;
@@ -688,6 +688,10 @@ textarea {
 
 .menu-profile div p:first-child {
     color: var(--main-text-color);
+}
+
+#active .menu-profile div p:first-child {
+    color: var(--main-accent-color);
 }
 
 .menu-profile div p:last-child {
